--- a/vars/usergroup.yml
+++ b/vars/usergroup.yml
@@ -5,10 +5,18 @@
 ---
   usergroup:
     unix: 
-      username: sato
-      groupname: unix
-      uid: 2001
-      gid: 2000
-      home: /home/sato
-      shell: /bin/bash
-      password: "{{ 'test'|password_hash('sha512') }}"
+      - username: sato
+        groupname: unix
+        uid: 2001
+        gid: 2000
+        home: /home/sato
+        shell: /bin/bash
+        password: "{{ 'test'|password_hash('sha512') }}"
+
+      - username: suzuki
+        groupname: unix
+        uid: 2002
+        gid: 2000
+        home: /home/suzuki
+        shell: /bin/bash
+        password: "{{ 'test'|password_hash('sha512') }}"      
